--- a/app/composer.json
+++ b/app/composer.json
@@ -18,7 +18,8 @@
             "Models\\": "models"
         },
         "files": [
-            "routes/web.php"
+            "routes/web.php",
+            "config/Core.php"
         ]
     },
     "require": {
