--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name mvc.uz;
+
     root /var/www/html/public;
     index index.php;
 
